--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="col-md-10">
                 <div class="card info-card p-5 text-center">
                     <!-- Use provided profile photo -->
-                    <img src="assets/foto_yohannes.jpg" class="profile-img mx-auto mb-4" alt="Foto Profil Yohannes Alfredo">
+                    <img src="assets/foto_yohannes.png" class="profile-img mx-auto mb-4" alt="Foto Profil Yohannes Alfredo">
 
                     <h1 class="display-6 fw-bold mb-3">Yohannes Alfredo</h1>
                     <h2 class="h5 text-muted mb-4">Mahasiswa S1 Teknik Elektro UNTIRTA</h2>
@@ -766,4 +766,5 @@
 
 </body>
 </html>
+
 
