--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
                     <!-- Use provided profile photo -->
                     <img src="assets/foto_yohannes.png" class="profile-img mx-auto mb-4" alt="Foto Profil Yohannes Alfredo">
 
-                    <h1 class="display-6 fw-bold mb-3">Yohannes Alfredo</h1>
+                    <h1 class="display-6 fw-bold mb-3">Yohanes Alfredo</h1>
                     <h2 class="h5 text-muted mb-4">Mahasiswa S1 Teknik Elektro UNTIRTA</h2>
 
                     <p class="text-start fs-5">
                         Aplikasi sistem monitoring ini dibuat oleh <strong>Yohannes Alfredo</strong> untuk memenuhi Tugas Akhir Strata Satu (S1) di Jurusan Teknik Elektro, Universitas Sultan Ageng Tirtayasa (UNTIRTA). Sistem ini berfungsi untuk memantau perangkat IoT secara realtime melalui Firebase Realtime Database dan menampilkan data historis gambar.
                     </p>
                     <hr>
-                    <p class="text-start"><i class="fa-solid fa-graduation-cap me-2 text-primary"></i> NIM: <strong>40201800XX</strong></p>
+                    <p class="text-start"><i class="fa-solid fa-graduation-cap me-2 text-primary"></i> NIM: <strong>3332200045</strong></p>
                     <p class="text-start"><i class="fa-solid fa-building-columns me-2 text-primary"></i> Jurusan: <strong>Teknik Elektro</strong></p>
                 </div>
             </div>
@@ -766,5 +766,6 @@
 
 </body>
 </html>
+
 
 
